# substrate-assignments

lesson01/: README.md
lesson01/pallets/poe/: Cargo.toml
lesson01/pallets/poe/src/: tests.rs
lesson01/runtime/src/: lib.rs
lesson02/: Cargo.toml  README.md
lesson02/pallets/kitties/: Cargo.toml  expand.rs
lesson02/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
lesson02/runtime/: Cargo.toml
lesson02/runtime/src/: lib.rs
lesson03/: README.md
lesson03/frontend/src/: Kitties.js  KittyCards.js
lesson03/node/pallets/kitties/: Cargo.toml
lesson03/node/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
lesson03/node/runtime/src/: lib.rs
lesson04/: README.md
lesson04/frontend/src/: App.js  KittyAvatar.js  KittyCards.js
lesson04/node/node/src/: service.rs
lesson04/node/pallets/kitties/: Cargo.toml
lesson04/node/pallets/kitties/src/: lib.rs  tests.rs
lesson04/node/runtime/: Cargo.toml
lesson04/node/runtime/src/: lib.rs
lesson05/erc20/: Cargo.toml  lib.rs
lesson06/: README.md
lesson06/benchmarks-poe/: README.md
lesson06/benchmarks-poe/pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs
lesson06/pallets/poe/src/: lib.rs  weights.rs
lesson06/runtime/src/: lib.rs
lesson06/substrate-stencil/: xiankun-staging-raw.json  xiankun-staging.json  xiankun-testnet-config.md
lesson06/substrate-stencil/node/src/: chain_spec.rs  command.rs
pallets/poe/src/: lib.rs  mock.rs
runtime/: Cargo.toml
